Atlas Yol is revised

--- a/atlasyol_float/index.html
+++ b/atlasyol_float/index.html
@@ -2,10 +2,13 @@
 <html>
     <head>
         <title>Atlas Yol</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>  
-       <div class="background-image"></div> 
         <div class="main-container">
             <header class="header">
                 <img src="./img/atlasyol-logo.png">
@@ -19,49 +22,49 @@
                 </div>
             </header>
             <nav class="navbar">
-                <table>
-                    <tr class="navbar-list">
-                        <td>HOME</td>
-                        <td>ABOUT US</td>
-                        <td>BUSINESS SECTOR</td>
-                        <td>HUMAN RESOURCES</td>
-                        <td id="navbar-last-item">CONTACT US</td>
-                    </tr>
-                </table>
+                <ul class="navbar-list">
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">ABOUT US</a></li>
+                        <li><a href="">BUSINESS SECTOR</a></li>
+                        <li><a href="">HUMAN RESOURCES</a></li>
+                        <li><a href="">CONTACT US</a></li>
+                </ul>
             </nav>
-            <main class="home-main">
+            <main>
+                <div class="home-main">
                     <img src="./img/01.jpg">
                     <p>With the spirit of entrepreneurship, our company adopts the corporate culture and our innovative, dynamic, solution-oriented perspective is based on science. This is where our strength comes from.</p>
+                </div>
+                <div class="home-bottom">
+                    <div class="home-list">
+                        <div class="home-list-header">
+                            <img src="./img/home-list_01.png">
+                            <h5>CREATIVE_SOLUTIONS</h5>
+                        </div>
+                        <div class="home-list-body">
+                            <p>With academic knowledgeand field experience</p>
+                        </div>
+                    </div>
+                    <div class="home-list">
+                        <div class="home-list-header">
+                            <img src="./img/home-list_02.png">
+                            <h5>QUALITY POLICY</h5>
+                        </div>
+                        <div class="home-list-body">
+                            <p>Using the modern technology and scientific progress in our services,</p>
+                        </div>
+                    </div>
+                    <div class="home-list">
+                        <div class="home-list-header">
+                            <img src="./img/home-list_03.png">
+                            <h5>MANAGERIAL APPROACH</h5>
+                        </div>
+                        <div class="home-list-body">
+                            <p>our company's managment pattern includes building up</p>
+                        </div>
+                    </div>       
+                </div>
             </main>
-            <section class="home-bottom">
-                <div class="home-list01">
-                    <div class="home-list-01-header">
-                        <img src="./img/home-list_01.png">
-                        <h5>CREATIVE_SOLUTIONS</h5>
-                    </div>
-                    <div class="home-list-01-body">
-                        <p>With academic knowledgeand field experience</p>
-                    </div>
-                </div>
-                <div class="home-list02">
-                    <div class="home-list-02-header">
-                        <img src="./img/home-list_02.png">
-                        <h5>QUALITY POLICY</h5>
-                    </div>
-                    <div class="home-list-02-body">
-                        <p>Using the modern technology and scientific progress in our services,</p>
-                    </div>
-                </div>
-                <div class="home-list03">
-                    <div class="home-list-03-header">
-                        <img src="./img/home-list_03.png">
-                        <h5>MANAGERIAL APPROACH</h5>
-                    </div>
-                    <div class="home-list-03-body">
-                        <p>our company's managment pattern includes building up</p>
-                    </div>
-                </div>       
-            </section>
         </div>
     </body>
 </html>
