gurcuoglu is revised

--- a/gurcuoglu_flex/index.html
+++ b/gurcuoglu_flex/index.html
@@ -1,7 +1,11 @@
 <!Doctype Html>
 <html>
     <head>
-        <title>Gurcuoglu_group</title>
+        <title>Gurcuoglu Group</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>  
@@ -9,55 +13,55 @@
                 <img src="./img/logo-gurcuoglu.png">
                 <nav class="navbar">
                     <ul class="navbar-list">
-                            <li>ANA SAYFA</li>
-                            <li>KURUMSAL</li>
-                            <li>GRUP ŞİRKETLERİ</li>
-                            <li>İNSAN KAYNAKLARI</li>
-                            <li>İLETİŞİM</li>
+                            <li><a href="">ANA SAYFA</a></li>
+                            <li><a href="">KURUMSAL</a></li>
+                            <li><a href="">GRUP ŞİRKETLERİ</a></li>
+                            <li><a href="">İNSAN KAYNAKLARI</a></li>
+                            <li><a href="">İLETİŞİM</a></li>
                     </ul>
                 </nav>
             </header>
-            <section class="banner">
-                <img src="./img/banner.png">
-            </section>
-            <main class="home-main">
+            <main>
+                <div class="banner">
+                    <img src="./img/banner.png">
+                </div>
                 <div class="home-main-buttons">
                     <Button><img src="./img/logo-miltas.png"></Button>
                     <Button><img src="./img/logo-warwick-shipping.png"></Button>
                     <Button><img src="./img/logo-desentas.png"></Button>
                 </div>
-            </main>
-            <section class="home-bottom">
-                <div class="home-haberler">
-                    <h3>HABERLER</h3>
-                    <aside class="home-haberler-01">
-                        <img src="./img/news.png">
-                        <div class="home-haberler-01-text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipis elit<br/><br/></p>
-                            <p><strong>10.01.2014</strong></p>
-                        </div>
-                    </aside>
-                    <aside class="home-haberler-02">
-                        <img src="./img/news.png">
-                        <div class="home-haberler-02-text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipis elit<br/><br/></p>
-                            <p><strong>10.01.2014</strong></p>
-                        </div>
-                    </aside>
-                    <aside class="home-haberler-03">
-                        <img src="./img/news.png">
-                        <div class="home-haberler-03-text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipis elit<br/><br/></p>
-                            <p><strong>10.01.2014</strong></p>
-                        </div>
-                    </aside>
-                </div>
+                <div class="home-bottom">
+                    <div class="home-haberler">
+                        <h3>HABERLER</h3>
+                        <aside class="home-haberler-aside">
+                            <img src="./img/news.png">
+                            <div class="home-haberler-01-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipis elit<br/><br/></p>
+                                <time><strong>10.01.2014</strong></time>
+                            </div>
+                        </aside>
+                        <aside class="home-haberler-aside">
+                            <img src="./img/news.png">
+                            <div class="home-haberler-02-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipis elit<br/><br/></p>
+                                <time><strong>10.01.2014</strong></time>
+                            </div>
+                        </aside>
+                        <aside class="home-haberler-aside">
+                            <img src="./img/news.png">
+                            <div class="home-haberler-03-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipis elit<br/><br/></p>
+                                <time><strong>10.01.2014</strong></time>
+                            </div>
+                        </aside>
+                    </div>
 
-                <div class="home-article">
-                    <h3>GÜRCÜOĞLU GROUP</h3>
-                    <article> lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</article>
-                </div>   
-            </section>
+                    <div class="home-article">
+                        <h3>GÜRCÜOĞLU GROUP</h3>
+                        <article> lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</article>
+                    </div>   
+                </div>
+            </main>
             <footer>
                 <p>2014 lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </footer>
