gurcuoglu is revised

--- a/litmus_flex/index.html
+++ b/litmus_flex/index.html
@@ -2,61 +2,67 @@
 <html>
     <head>
         <title>Gurcuoglu Group</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>  
-            <header class="header">
+        <header>
                 <img src="./img/logo.png">
                 <nav class="navbar">
                     <ul class="navbar-list-first">
-                        <li>YÖNETİM DANIŞMANLIĞI</li>
-                        <li>FİNANS DANIŞMANLIĞI</li>
+                        <li><a href="">YÖNETİM DANIŞMANLIĞI</a></li>
+                        <li><a href="">FİNANS DANIŞMANLIĞI</a></li>
                     </ul>
                     <ul class="navbar-list-second">
-                        <li>ANASAYFA</li>
-                        <li>HAKKIMIZDA</li>
-                        <li>HİZMETLER</li>
-                        <li>KARİYER</li>
-                        <li>İLETİŞİM</li>
+                        <li><a href="">ANASAYFA</a></li>
+                        <li><a href="">HAKKIMIZDA</a></li>
+                        <li><a href="">HİZMETLER</a></li>
+                        <li><a href="">KARİYER</a></li>
+                        <li><a href="">İLETİŞİM</a></li>
                     </ul>
                 </nav>
-            </header>
-            <section class="home-image">
-                    <img src="./img/main-image.png">
-            </section>
-            <main class="home-main">  
-                    <div class="home-main-article">
-                        <article> lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry.</br></br>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</article>
-                    </div>
-                    <div class="home-main-doviz">
-                        <div class="home-main-header">DÖVİZ<span>BİLGİLERİ</span></div>
-                        <div class="home-main-doviz-info">
-                            <div class="doviz ABD">
-                                <h5>ABD DOLARI</h5>
-                                <p><strong>A.</strong>2.6949</p>
-                                <p><strong>S.</strong>2.6998</p>
-                            </div>
-                            <div class="doviz EURO">
-                                <h5>EURO</h5>
-                                <p><strong>A.</strong>2.6949</p>
-                                <p><strong>S.</strong>2.6998</p>
-                            </div>
-                            <div class="doviz STERLIN">
-                                <h5>STERLIN</h5>
-                                <p><strong>A.</strong>2.6949</p>
-                                <p><strong>S.</strong>2.6998</p>
-                            </div>
-                            <div class="doviz JOPONYENI">
-                                <h5>JAPON YENI</h5>
-                                <p><strong>A.</strong>2.6949</p>
-                                <p><strong>S.</strong>2.6998</p>
-                            </div>
+        </header>
+        <main>
+            <div class="home-image">
+                        <img src="./img/main-image.png">
+            </div>
+            <div class="home-main">
+                <div class="home-main-article">
+                    <article> lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry.</br></br>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,lorem ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</article>
+                </div>
+                <div class="home-main-doviz">
+                    <div class="home-main-header">DÖVİZ<span>BİLGİLERİ</span></div>
+                    <div class="home-main-doviz-info">
+                        <div class="doviz ABD">
+                            <h5>ABD DOLARI</h5>
+                            <p><b>A.</b>2.6949</p>
+                            <p><b>S.</b>2.6998</p>
+                        </div>
+                        <div class="doviz EURO">
+                            <h5>EURO</h5>
+                            <p><b>A.</b>2.6949</p>
+                            <p><b>S.</b>2.6998</p>
+                        </div>
+                        <div class="doviz STERLIN">
+                            <h5>STERLIN</h5>
+                            <p><b>A.</b>2.6949</p>
+                            <p><b>S.</b>2.6998</p>
+                        </div>
+                        <div class="doviz JOPONYENI">
+                            <h5>JAPON YENI</h5>
+                            <p><b>A.</b>2.6949</p>
+                            <p><b>S.</b>2.6998</p>
                         </div>
                     </div>
-            </main>
-            <footer>
-                <p>LITMUS CONSULTING 2015</p>
-                <p><strong>RESERVED</strong></p>
-            </footer>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <p>LITMUS CONSULTING 2015</p>
+            <p><b>RESERVED</b></p>
+        </footer>
     </body>
 </html>
