lkd responsive style.css is revised

--- a/lkd_responsive/index.html
+++ b/lkd_responsive/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
   <title>TLKD</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="media.css">
 </head>
 <body>
-
   <div class="container">
     <header>
       <div class="logo">
         <img src="img/logo.gif" alt="">
       </div>
-
       <nav>
         <ul>
           <li><a href="">ANA SAYFA</a></li>
@@ -26,48 +24,44 @@
         </ul>
       </nav>
     </header>
-
-    <section class="banner">
-      <img src="img/banner.jpg" alt="">
-    </section>
-
-    <section class="news">
-      <div class="title">
-        <h1>NEWS</h1>
-      </div>
-      <div class="items">
-        <div class="item">
-          <img src="img/news.png" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus ad nobis eius odit excepturi mollitia obcaecati sit soluta dolor sint!</p>
+    <main>
+      <section class="banner">
+        <img src="img/banner.jpg" alt="">
+      </section>
+      <section class="news">
+        <div class="title">
+          <h1>NEWS</h1>
         </div>
+        <div class="items">
           <div class="item">
-          <img src="img/news.png" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus ad nobis eius odit excepturi mollitia obcaecati sit soluta dolor sint!</p>
+            <img src="img/news.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus ad nobis eius odit excepturi mollitia obcaecati sit soluta dolor sint!</p>
+          </div>
+            <div class="item">
+            <img src="img/news.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus ad nobis eius odit excepturi mollitia obcaecati sit soluta dolor sint!</p>
+          </div>
+            <div class="item">
+            <img src="img/news.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus ad nobis eius odit excepturi mollitia obcaecati sit soluta dolor sint!</p>
+          </div>
+            <div class="item">
+            <img src="img/news.png" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus ad nobis eius odit excepturi mollitia obcaecati sit soluta dolor sint!</p>
+          </div>
         </div>
-          <div class="item">
-          <img src="img/news.png" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus ad nobis eius odit excepturi mollitia obcaecati sit soluta dolor sint!</p>
-        </div>
-          <div class="item">
-          <img src="img/news.png" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus ad nobis eius odit excepturi mollitia obcaecati sit soluta dolor sint!</p>
-        </div>
-      </div>
-    </section>
-
+      </section>
+    </main>
     <footer>
         <div class="contact">
-          <p>E mail:</p>
+          <address>E mail:</address>
           <input type="email">
           <button type="submit">Gönder</button>
         </div>
-
         <div class="copyright">
           <p>Copyright Lorem ipsum dolor sit amet.</p>
       </div>
-
     </footer>
-
-    </div>
+ </div>
 </body>
 </html>
